fix overflow problem for main content

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: #F2F6FC;
+  overflow: initial;
   color: #333;
   text-align: center;
   line-height: 160px;
